# pysatSpaceWeather

./: .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  main.yml  pip_rc_install.yml  pysat_rc.yml
docs/: Makefile  citing.rst  conf.py  examples.rst  history.rst  index.rst  installation.rst  methods.rst  overview.rst  requirements.txt  supported_instruments.rst
docs/examples/: ex_ace.rst  ex_f107.rst  ex_init.rst  ex_kp.rst  ex_mock_downloads.rst  ex_mult_downloads.rst
pysatSpaceWeather/: __init__.py
pysatSpaceWeather/instruments/: __init__.py  ace_epam.py  ace_mag.py  ace_sis.py  ace_swepam.py  norp_rf.py  sw_ace.py  sw_ae.py  sw_al.py  sw_ap.py  sw_apo.py  sw_au.py  sw_cp.py  sw_dst.py  sw_f107.py  sw_flare.py  sw_hpo.py  sw_kp.py  sw_mgii.py  sw_polar-cap.py  sw_polarcap.py  sw_sbfield.py  sw_ssn.py  sw_storm-prob.py  sw_stormprob.py
pysatSpaceWeather/instruments/methods/: __init__.py  ace.py  auroral_electrojet.py  dst.py  f107.py  general.py  gfz.py  kp_ap.py  lasp.py  lisird.py  norp.py  sw.py  swpc.py
pysatSpaceWeather/tests/: __init__.py  test_instruments.py  test_methods_ace.py  test_methods_ae.py  test_methods_f107.py  test_methods_general.py  test_methods_gfz.py  test_methods_kp.py  test_methods_lisird.py  test_methods_norp.py  test_sw.py
pysatSpaceWeather/tests/test_data/: 20090101_ace_epam_5m.txt  20090101_ace_mag_1m.txt  20090101_ace_sis_5m.txt  20090101_ace_swepam_1m.txt  3-day-geomag-forecast.txt  3-day-solar-geomag-predictions.txt  45-day-ap-forecast.txt  Fadj_2009-01.txt  Fobs_2009-01.txt  Hp30_2009-01.txt  Hp60_2009-01.txt  Kp_def2009.wdc  Kp_now2020.wdc  SN_2009-01.txt  TYKW-NoRP_dailyflux.txt  ace-epam.txt  ace-magnetometer.txt  ace-sis.txt  ace-swepam.txt  ae_last_96_hrs.txt  al_last_96_hrs.txt  ap30_2009-01.txt  (+8 more)
(+856 files in other folders)
