[build-system]
requires = ["setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "pysatSpaceWeather"
version = "0.1.0"
description = 'pysat support for Space Weather Indices'
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Angeline Burrell", email = "pysat.developers@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
keywords = [
  "pysat",
  "ionosphere",
  "heliophysics",
  "magnetosphere",
  "space-weather",
  "forecasting",
  "indexes"
]
dependencies = [
  "netCDF4",
  "numpy",
  "packaging",
  "pandas",
  "pysat>=3.1.0",
  "requests",
  "xarray"]

[project.optional-dependencies]
test = [
  "coveralls < 3.3",
  "flake8",
  "flake8-docstrings",
  "hacking >= 1.0",
  "pytest",
  "pytest-cov",
  "pytest-ordering"
]
doc = [
  "extras_require",
  "ipython",
  "m2r2",
  "numpydoc",
  "pyproject_parser",
  "sphinx",
  "sphinx_rtd_theme >= 1.2.2,<2.0.0"
]

[project.urls]
Documentation = "https://pysatspaceweather.readthedocs.io/en/latest/"
Source = "https://github.com/pysat/pysatSpaceWeather"

[tool.coverage.report]

[tool.pytest.ini_options]
addopts = "--cov=pysatSpaceWeather"
markers = [
  "all_inst",
  "download",
  "no_download",
  "load_options",
  "new_tests",
  "first",
  "second"
]
